# windows-bindgen-experiment

./: Cargo.toml  README.md
crates/libs/sys/src/Windows/Win32/Graphics/CompositionSwapchain/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/DXCore/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct2D/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct2D/Common/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct3D/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct3D/Dxc/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct3D10/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct3D11/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct3D11on12/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct3D12/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct3D9/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Direct3D9on12/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/DirectComposition/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/DirectDraw/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/DirectManipulation/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/DirectWrite/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Dwm/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Dxgi/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Gdi/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Imaging/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/OpenGL/: mod.rs
crates/libs/sys/src/Windows/Win32/Graphics/Printing/: mod.rs
src/: main.rs
(+2 files in other folders)
